# 15min-crypto-polymarket-trading-bot

./: Cargo.toml  README.md  README.rust.md
.github/: FUNDING.yml
src/: config.rs  lib.rs  main.rs
src/exchange/: mock.rs  mod.rs  polymarket.rs
src/market/: mod.rs
src/strategy/: mod.rs
