[package]
name = "poly"
version = "0.1.0"
edition = "2021"
description = "Polymarket Smart Ape strategy bot (15min BTC)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
polymarket = ["reqwest", "tokio"]
